# jishe

./: .gitignore  OneKeyStart.bat  README.md  app.py  config.example.json  config.example.yaml  config.json  config.yaml  qwen_clone_audio_worker.py  requirements.txt  test_config.json
VideoLingo.egg-info/: PKG-INFO  requires.txt
backend/: __init__.py  app.py  auth_system.py  database.py  main.py  users.db  voice_cloning_db.sql
core/: _2_asr.py  _4_2_translate.py  _5_split_sub.py  _6_gen_sub.py  __init__.py  database.py  processor.py  qwen_clone_bridge.py
core/asr_backend/: audio_preprocess.py  whisperX_302.py
core/spacy_utils/: load_nlp_model.py  split_by_comma.py
core/utils/: config_utils.py
css/: main.css  video.css
frontend/: daohang(2).html  home.html  lianxiti.html  login.html  test.html  vocabulary.html
frontend/css/: chat.css  chaxun.css  video.css  words.css
frontend/js/: chat.js  loadHeader.js  video.js
frontend/template/: footer.html  header.html
output/: main.db
output/gpt_log/: align_subs.json  language_detection.json  split_by_meaning.json  summary.json  translate_expressiveness.json  translate_faithfulness.json  word_detail_dynasties_en.json  (+2 more)
subprojects/qwen-comfy-local-clone/: README.md  config.chineseclick.json  config.example.json  pyproject.toml  requirements.txt
subprojects/qwen-comfy-local-clone/src/qwen_comfy_clone/: __init__.py  asr.py  audio.py  cli.py  config.py  domain.py  languages.py  local_models.py  logging_utils.py  pipeline.py  subtitles.py  textnorm.py  tts.py  webui.py
translations/: zh-CN.json
(+18 files in other folders)
